[tool.poetry]
name = "mitypes"
version = "0.1.0"
description = "Type definitions used in Misskey API responses."
license = "MIT"
authors = ["sonyakun <owner@sonyakun.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"